--- a/planetary_diversity/localisation/braz_por/planetarydiversity_engine_events_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_engine_events_l_braz_por.yml
@@ -1,8 +1,8 @@
 ﻿l_braz_por:
 
 ###Terraforming Event
- pdengine.21.name: "Terraforming Complete"
- pdengine.21.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this world."
+ pdengine.21.name: "Terraformação concluída"
+ pdengine.21.desc: "Ao terminarmos a terraformação de §Y[From.GetName]§! temos a oportunidade de escolher o novo bioma deste mundo."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -86,15 +86,15 @@
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gaia Terraforming Complete"
- pdengine.24.desc: "As we finish terraforming §Y[Root.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.24.name: "Terraformação de Gaia concluída"
+ pdengine.24.desc: "Ao terminarmos a terraformação de §Y[Root.GetName]§! temos a oportunidade de escolher o novo bioma deste mundo ideal."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
  pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Our people evolved on this paradise of a planet we call §Y[Capital_scope.GetName]§!. What biome is our homeworld?"
+ pdengine.90.desc: "Nosso povo evoluiu neste paraíso que é um planeta que chamamos de §Y[Capital_scope.GetName]§!. Qual bioma é nosso mundo natal?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -103,8 +103,8 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gaia Terraforming Complete"
- pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.96.name: "Terraformação de Gaia concluída"
+ pdengine.96.desc: "Ao terminarmos a terraformação de §Y[Root.GetName]§! temos a oportunidade de escolher o novo bioma deste mundo ideal."
  pdengine.96.wet_gaia_cave: "Wet Climate"
  pdengine.96.dry_gaia_cave: "Dry Climate"
  pdengine.96.cold_gaia_cave: "Cold Climate"
