--- a/planetary_diversity/localisation/braz_por/planetarydiversity_missing_vanilla_concepts_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_missing_vanilla_concepts_l_braz_por.yml
@@ -1,9 +1,9 @@
 ﻿l_braz_por:
 
 ###Missing Vanilla Concepts - to be deleted if ever added
- concept_industrial_district: "$district_industrial$"
+ concept_industrial_district: "$distrito_industrial$"
  concept_industrial_district_desc: "- £housing£ $MOD_PLANET_HOUSING_ADD$: §G+2§!\n- £mod_job_foundry_add£ ['concept_foundry', $job_foundry$] Jobs: §G+1§!\n- £mod_job_artisan_add£ ['concept_artisan', $job_artisan$] Jobs: §G+1§!\n\n§L$district_industrial_desc$§!"
  concept_foundry: "$job_foundry_plural$"
- concept_foundry_desc: "£job_foundry£ $job_foundry_plural$ turn £minerals£ §Y$minerals$§! into £alloys£ §Y$alloys$§!\n\n§L$job_foundry_desc$§!"
+ concept_foundry_desc: "£job_foundry£ $job_foundry_plural$ transformar £ minerais £ §Y$minerals$§! em £alloys£ §Y$alloys$§!\n\n§L$job_foundry_desc$§!"
  concept_artisan: "$job_artisan_plural$"
- concept_artisan_desc: "£job_artisan£ $job_artisan_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§!\n\n§L$job_artisan_desc$§!"
+ concept_artisan_desc: "£job_artisan£ $job_artisan_plural$ trasformar £minerais£ §Y$minerais$§! em £consumer_goods£ §Y$consumer_goods$§!\n\n§L$job_artisan_desc$§!"
