--- a/planetary_diversity/localisation/braz_por/planetarydiversity_start_screen_message_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_start_screen_message_l_braz_por.yml
@@ -1,11 +1,11 @@
 ﻿l_braz_por:
 
- START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape among the rich jungles and shallow seas of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the lush river valleys [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the rich boreal forests [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape among the shaded forests under the constant sun of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape in the twilight zone of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape on the frozen twilight coast of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the great lush caverns of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+ START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "Ao longo das eras, desde que as primeiras comunidades primitivas de [GetSpeciesName] tomaram forma entre as ricas selvas e mares rasos de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "Ao longo das eras, desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma nos exuberantes vales dos rios [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "Ao longo das eras, desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma nas ricas florestas boreais [GetHomeWorldName], a nossa civilização espalhou-se e prosperou."
+ START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "Nas eras desde que as primeiras comunidades primitivas de [GetSpeciesName] tomaram forma entre as florestas sombreadas sob o sol constante de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "Nas eras desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma na zona crepuscular de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "Nas eras desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma na costa congelada e crepuscular de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_WET_CAVE: "Nas eras desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma nas grandes cavernas exuberantes de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_DRY_CAVE: "Nas eras desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma nas cavernas de arenito de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
+ START_SCREEN_PART_ONE_COLD_CAVE: "Nas eras desde que as primeiras comunidades [GetSpeciesName] primitivas tomaram forma nas cavernas cheias de gelo de [GetHomeWorldName], nossa civilização se espalhou e prosperou."
