--- a/planetary_diversity/localisation/braz_por/planetarydiversity_vanilla_overwrites_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_vanilla_overwrites_l_braz_por.yml
@@ -1,4 +1,4 @@
 ﻿l_braz_por:
 
 #Overwritten Vanilla Loc
- mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ da [GetAdministratorPluralWithIcon]"
