--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -70,7 +70,7 @@
  trait_pc_pd_crag_preference: "Ocean Preference"
  trait_pc_pd_crag_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_fog: "Fog World"
- pc_pd_fog_desc: "Rocky world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Oceans cover much of the surface and extreme humity causes near constant fog moving over the lush forests and grasslands."
+ pc_pd_fog_desc: "Rocky world with a nitrogen-oxygen atmosphere and a significant hydrosphere. Oceans cover much of the surface and extreme humidity causes near constant fog moving over the lush forests and grasslands."
  pc_pd_fog_adj: "foggy"
  mod_pc_pd_fog_habitability: "Ocean Habitability"
  trait_pc_pd_fog_preference: "Ocean Preference"
