--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -92,6 +92,12 @@
  mod_pc_pd_commerical_city_habitability: "占位符，未使用"
  trait_pc_pd_commerical_city_preference: "占位符，未使用"
  trait_pc_pd_commerical_city_preference_desc: "占位符，未使用"
+ pc_pd_garden_city: "占位符，未使用"
+ pc_pd_garden_city_desc: "占位符，未使用"
+ pc_pd_garden_city_adj: "占位符，未使用"
+ mod_pc_pd_garden_city_habitability: "占位符，未使用"
+ trait_pc_pd_garden_city_preference: "占位符，未使用"
+ trait_pc_pd_garden_city_preference_desc: "占位符，未使用"
  pc_pd_hive: "蜂巢主脑星球"
  pc_pd_hive_desc: "这整个世界其实就是一个巨大的生物体，与创造它的蜂群思维交缠在一起。它被塑造成高级思维进程的堡垒，受到严密戒备。整个世界随时准备迎击不受欢迎的来客。"
  pc_pd_hive_adj: "$pc_hive_adj$"
