--- a/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_l_french.yml
+++ b/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_l_french.yml
@@ -109,6 +109,12 @@ decision_pd_commerical_arcology_project_relic_effects_short: "$decision_pd_comme
  mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city: "Dummy-Class, do not use."
+ pc_pd_garden_city_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
 
 ###Hive+Machine Overmind Worlds
  #Planet Classess
