--- a/planetary_diversity_arcologies/localisation/spanish/planetarydiversity_more_arcologies_l_spanish.yml
+++ b/planetary_diversity_arcologies/localisation/spanish/planetarydiversity_more_arcologies_l_spanish.yml
@@ -109,6 +109,12 @@
  mod_pc_pd_commerical_city_habitability: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference: "Dummy-Class, do not use."
  trait_pc_pd_commerical_city_preference_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city: "Dummy-Class, do not use."
+ pc_pd_garden_city_desc: "Dummy-Class, do not use."
+ pc_pd_garden_city_adj: "Dummy-Class, do not use."
+ mod_pc_pd_garden_city_habitability: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference: "Dummy-Class, do not use."
+ trait_pc_pd_garden_city_preference_desc: "Dummy-Class, do not use."
 
 ###Hive+Machine Overmind Worlds
  #Planet Classess
