--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -13,8 +13,6 @@
  pd_mushroom_desc: "真菌主宰着星球生态系统，广阔的蕈林和蕈原覆盖了大片区域。"
  pd_temperate: "温带世界"
  pd_temperate_desc: "这个世界气候温和，几乎每一块陆地都有丰富的生物多样性。"
- pd_sakura: "Sakura World"
- pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_megaflora: "巨木世界"
  pd_megaflora_desc: "巨木覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
  pd_petrified: "木化石世界"
@@ -250,4 +248,7 @@
  pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
  pd_blossom: "花簇世界"
  pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
- pd_lilypad_desc: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
+ pd_lilypad: "睡莲世界"
+ pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
+ pd_sakura: "樱花世界"
+ pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
