--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_shroud_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_shroud_l_simp_chinese.yml
@@ -1,8 +1,8 @@
 ﻿l_simp_chinese:
- ap_pd_shroud_worlds: "无节制工业"
- ap_pd_shroud_worlds_desc: "为追求不受限制的生产力，我们必须抛开环境限制，充分发掘星球的工业潜力。"
- allow_shroud_worlds: "§Y解锁决议：§!在非理想星球使用$decision_pd_aw_shroud_planet$"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§!修正：\n$t$—解锁£district£ §Y发电区划§!和§Y采矿区划§!\n$t$—禁用所有§Y农业区划§!\n$t$—$MOD_HABITABILITY_CEIL$：§Y60%§!\n$t$—$mod_planet_jobs_alloys_produces_mult$：§G100%§!\n$t$—$mod_planet_jobs_consumer_goods_produces_mult$§G100%§!\n$t$—$mod_planet_chemists_produces_mult$：§G50%§!\n$t$—$mod_planet_refiners_produces_mult$：§G50%§!\n$t$—$mod_planet_translucers_produces_mult$：§G50%§!"
+ ap_pd_shroud_worlds: "虚境相变"
+ ap_pd_shroud_worlds_desc: "尘世与虚境之间的分界比我们所想的薄弱。通过集中灵能力量，我们可以进一步削弱这些分界，塑造出横跨两个维度的世界。"
+ allow_shroud_worlds: "§Y解锁决议：§!$decision_pd_aw_shroud_planet$"
+ describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§!修正：\n$t$§G灵能§! £pop£ 人口\n—$mod_planet_psionic_jobs_produces_mult$：§G10%§!\n—$MOD_POP_HAPPINESS$：§G10%§!\n\n§Y非灵能§! £pop£ 人口\n—£mod_pop_environment_tolerance£ §Y星球宜居性§!：§R-50%§!\n—$MOD_POP_HAPPINESS$：§R-25%§!\n—$MOD_POP_GROWTH_SPEED$：§R-25%§!"
  decision_pd_aw_shroud_planet: "虚境相变"
  decision_pd_aw_shroud_planet_desc: "我们可以削弱该星球与虚境的分界，在物质世界和灵能世界之间建立平衡。"
  decision_pd_aw_shroud_planet_effects_short: "已添加§Y$pd_aw_shroud_planet$§!修正。\n\n提升£pop£ §G灵能人口的产出§!，但是会降低£pop£ §Y非灵能人口的产出§!。"
