--- a/planetary_diversity_ascension_worlds/localisation/japanese/planetarydiversity_aw_tree_of_life_l_japanese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/japanese/planetarydiversity_aw_tree_of_life_l_japanese.yml
@@ -73,7 +73,7 @@
  ap_pd_tree_of_life_bloomed: "Bloomed Megaflora Hive Worlds"
  ap_pd_tree_of_life_bloomed_desc: "We can encourage each Great Tree of Life to bloom, unlocking their true potential."
  allow_tree_of_life_bloomed: "§HUnlocks Decision:§! $decision_pd_aw_bloom_tree_of_life$"
- describe_tree_of_life_bloomed_worlds: "§YBloomed $pc_pd_megaflora_hive_bloomed$s§! are special planet-class that are uninhabitable for non-Hive Minded Pops, but are not limited in how many £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§! they can support. All districts have thier £pop£ §YJobs§! and £housing£ §YHousing§! doubled. £pop£ §YPops§! living on §YBloomed $pc_pd_megaflora_hive_bloomed$§! have their §YResource Output§! increased by §G+10%§!"
+ describe_tree_of_life_bloomed_worlds: "§YBloomed $pc_pd_megaflora_hive_bloomed$s§! are a special planet-class that are uninhabitable for non-Hive Minded Pops, but are not limited in how many £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§! they can support. All districts have thier £pop£ §YJobs§! and £housing£ §YHousing§! doubled. £pop£ §YPops§! living on §YBloomed $pc_pd_megaflora_hive_bloomed$§! have their §YResource Output§! increased by §G+10%§!"
 
 #Holdings
  holding_pd_aw_tree_of_life_sapling: "Megaflora Tree of Life Sprout"
